# KNN-classifier

./: .gitignore  README.md  imgs_to_csv.py  params.py  predict.py  pyproject.toml  train.py
knn_img_classifier/: classify.py  imgs_to_csv.py  predict.py  train.py  utils.py
